# challenges-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: api.md  architecture.md
docs/features/: auth.md  challenges.md  leaderboards.md
docs/index/: auth.md  core.md  db.md  handlers.md  migrations.md  models.md  tests.md
docs/plans/: new-links.md
migrations/: 002_seed_challenges.sql  003_friend_system.sql
src/: config.rs  error.rs  main.rs
src/auth/: middleware.rs  token.rs
src/db/: badges.rs  challenges.rs  friend_invites.rs  friend_requests.rs  invites.rs  mod.rs  participants.rs  progress.rs  users.rs
src/handlers/: activity_feed.rs  badges.rs  challenges.rs  friends.rs  invites.rs  join.rs  leaderboard.rs  mod.rs  participants.rs  progress.rs  users.rs
src/models/: badge.rs  challenge.rs  friend_invite.rs  friend_request.rs  invite.rs  mod.rs  participant.rs  progress.rs  user.rs
tests/: integration_test.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: Layout.tsx
web/src/components/challenge/: BadgeManager.tsx  CriteriaEditor.tsx  GoalEditor.tsx  InviteManager.tsx  TierEditor.tsx
web/src/data/: dxcc-entities.ts  us-states.ts
web/src/pages/: ChallengeEditor.tsx  ChallengeList.tsx  Login.tsx
web/src/types/: challenge.ts
