[package]
name = "activities-server"
version = "0.2.5"
edition = "2021"
description = "Self-hostable activities server for Carrier Wave ham radio logging"
license = "MIT"

[dependencies]
# Web framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Utilities
rand = "0.8"
tower = "0.5.3"

[dev-dependencies]
axum-test = "15"
